# visual_servoing_ws

./: .gitignore  LICENSE.txt  Readme.md
src/custom_jackal_interfaces/: CMakeLists.txt  package.xml
src/flir_camera_pkg/: package.xml  setup.cfg  setup.py
src/flir_camera_pkg/flir_camera_pkg/: find_target_3d_points.py
src/jackal_pkg/: package.xml  setup.cfg  setup.py
src/jackal_pkg/jackal_pkg/: target_follower.py
src/kinova_gen3_lite_pkg/: package.xml  setup.cfg  setup.py
src/kinova_gen3_lite_pkg/kinova_gen3_lite_pkg/: Kinova_Gen3_Lite_IKP.py  kinovaIKController.py  kinova_close_controller.py  kinova_fixed_position_controller.py
src/visual_servoing_bringup/: CMakeLists.txt  package.xml
src/visual_servoing_bringup/launch/: visual_servoing_app.launch.xml
