<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visual_servoing_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="laloutsosnikos@gmail.com">robot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>flir_camera_pkg</exec_depend>
  <exec_depend>kinova_gen3_lite_pkg</exec_depend>
  <exec_depend>jackal_pkg</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
